--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                 </button>
                                 <div class="logo">
                                     <a class="navbar-brand js-scroll-trigger logo-header" href="#">
-                                        <img src="images/logo.png" alt="">
+                                        <img src="news-images\LOGO FOOD TRUCK\ALATHAI-LOGO-04.png" style="width:110px;height:150px;" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -88,9 +88,12 @@
         <!-- end header -->
     </div>
 	<!-- end site-header -->
-	
-    <div id="banner" class="banner full-screen-mode parallax">
-        <div class="container pr">
+	<div id="videowrapper">
+    <div id="fullScreenDiv">
+       <video id="video" role="presentation" preload="auto" playsinline="" crossorigin="anonymous" loop="" muted="" autoplay="" class="blur">
+            <source src="news-images/alathai-v2.mp4" type="video/mp4">
+        </video> 
+        <div id="videoMessage" class="styling">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="banner-static">
                     <div class="banner-text">
@@ -109,6 +112,7 @@
                             
                             </div>
                             <a href="#about">
+                            	<br>
                                 <div class="mouse"></div>
                             </a>
                         </div>
@@ -123,7 +127,7 @@
         <!-- end container -->
     </div>
     <!-- end banner -->
-
+</div>
     <div id="about" class="about-main pad-top-100 pad-bottom-100">
         <div class="container">
             <div class="row">
@@ -153,7 +157,7 @@
         </div>
         <!-- end container -->
     </div>
-
+<!------------------------------------------------- Ceci est la partie des photos qui défile sur l'écran avec les plats --> 
     <div class="special-menu pad-top-100 parallax">
         <div class="container">
             <div class="row">
@@ -245,7 +249,7 @@
         <!-- end container -->
     </div>
     <!-- end special-menu -->
-
+<!------------------------------------------------- description des menus, prix images...  --------------> 
     <div id="menu" class="menu-main pad-top-100 pad-bottom-100">
         <div class="container">
             <div class="row">
@@ -452,7 +456,7 @@
     </div>
     <!-- end menu -->
 
-    <div id="our_team" class="team-main pad-top-100 pad-bottom-100 parallax">
+ <!--   <div id="our_team" class="team-main pad-top-100 pad-bottom-100 parallax">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -482,7 +486,7 @@
                                 </div>
                             </div>
                             <!-- end col -->
-                            <div class="col-md-4 col-sm-6">
+                            <!--<div class="col-md-4 col-sm-6">
                                 <div class="sf-team">
                                     <div class="thumb">
                                         <a href="#"><img src="images/staff-02.jpg" alt=""></a>
@@ -499,7 +503,7 @@
                                 </div>
                             </div>
                             <!-- end col -->
-                            <div class="col-md-4 col-sm-6">
+                            <!--<div class="col-md-4 col-sm-6">
                                 <div class="sf-team">
                                     <div class="thumb">
                                         <a href="#"><img src="images/staff-03.jpg" alt=""></a>
@@ -528,8 +532,8 @@
             <!-- end row -->
         </div>
         <!-- end container -->
-    </div>
-    <!-- end team-main -->
+    </div> 
+    <!-- end team-main --> 
 
     <div id="gallery" class="gallery-main pad-top-100 pad-bottom-100">
         <div class="container">
@@ -1071,7 +1075,7 @@
                     <div class="footer-in-main">
                         <div class="footer-logo">
                             <div class="text-center">
-                                <img src="images/logo.png" alt="" />
+                                <img src="news-images/capture.jpg" alt="" />
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
